# smon

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  pytest.ini  smon.py
.github/workflows/: ci.yml
src/smon/: __init__.py  app.py  config.py  gpustat_client.py  main.py  modals.py  slurm_client.py  smon.py  styles.py  utils.py  widgets.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_slurm_client.py  test_styles.py  test_utils.py  test_widgets.py
