[project]
name = "smon"
version = "0.1.0"
description = "A terminal user interface (TUI) for monitoring Slurm clusters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "textual",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
smon = "smon:main"

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/smon/_version.py"